p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app1
  template:
    metadata:
      labels:
        name: app1
    spec:
      containers:
      - name: openresty
        image: hchorfi/iot-ssh:linux-v1
        ports:
          - containerPort: 80
            name: app1-http
---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    name: app1
  ports:
  - name: app1-http-svc
    protocol: TCP
    port: 80
    targetPort: app1-http
